# mycode

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  TODO.md  biome.json  cli.py  config.example.json  go.work  go.work.sum  hatch_build.py  pyproject.toml
.basedpyright/: baseline.json
.github/workflows/: ci.yml  go-ci.yml  publish.yml
app/: config.py  main.py  schemas.py  session.py
app/agent/: core.py  instructions.py  skills.py  system_prompt.md  tools.py
app/api/routes/: chat.py
app/core/: config.py  logging.py
app/routers/: __init__.py  chat.py  sessions.py  workspaces.py
app/schemas/: chat.py
app/services/: session_service.py  stream_service.py
docs/: api.md  config.md  frontend.md  providers.md  sessions.md  web.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  types.ts
frontend/src/components/: Header.jsx  Layout.jsx  Layout.tsx  MobileHeader.jsx  MobileHeader.tsx  Sidebar.jsx  Sidebar.tsx  ThemeProvider.jsx  ThemeProvider.tsx  WorkspacePicker.jsx  WorkspacePicker.tsx
frontend/src/components/Chat/: CodeBlock.jsx  CodeBlock.tsx  EditDiff.jsx  EditDiff.tsx  HighlightedCode.jsx  HighlightedCode.tsx  InputArea.jsx  InputArea.tsx  MarkdownBlock.jsx  MarkdownBlock.tsx  MessageBubble.jsx  MessageBubble.tsx  MessageList.jsx  MessageList.tsx  ReasoningBlock.jsx  ReasoningBlock.tsx  ToolCard.jsx  ToolCard.tsx
frontend/src/components/Settings/: SettingsDrawer.jsx
frontend/src/components/UI/: Button.jsx  Input.jsx  Input.tsx
frontend/src/hooks/: sessionSelection.js  sessionSelection.ts  useChat.js  useChat.test.js  useChat.test.ts  useChat.ts
frontend/src/utils/: clipboard.ts  config.js  config.ts  highlighter.js  highlighter.ts  markdown.js  messages.js  messages.test.js  messages.test.ts  messages.ts  storage.js  storage.test.js  storage.test.ts  storage.ts
mycode/: __init__.py  cli.py
mycode-go/: go.mod  go.sum
mycode-go/cmd/mycode-go/: main.go  run.go  session.go  usage.go  web.go
mycode-go/internal/agent/: agent.go  agent_test.go
mycode-go/internal/config/: config.go  config_test.go  load.go  resolve.go
mycode-go/internal/message/: message.go
mycode-go/internal/models/: catalog.go  catalog_test.go  models_catalog.json
mycode-go/internal/prompt/: prompt.go  prompt_test.go
mycode-go/internal/provider/: anthropic.go  base.go  google.go  openai_chat.go  openai_responses.go  provider_test.go  registry.go  specs.go
mycode-go/internal/server/: app.go  app_test.go  chat.go  embedded.go  http.go  input.go  run_manager.go  run_manager_test.go  sessions.go  types.go  workspaces.go
mycode-go/internal/session/: store.go  store_test.go
mycode-go/internal/tools/: bash.go  edit.go  files.go  tools.go  tools_test.go
mycode-go/internal/workspace/: workspace.go  workspace_test.go
mycode/cli/: __init__.py  chat.py  main.py  render.py  runtime.py  theme.py
mycode/core/: __init__.py  agent.py  compact.py  config.py  instructions.py  messages.py  model_catalog.py  models.py  models_catalog.json  provider_registry.py  rewind.py  session.py  skills.py  system_prompt.md  system_prompt.py  tools.py  utils.py
mycode/core/providers/: __init__.py  anthropic.py  anthropic_like.py  base.py  gemini.py  lookup.py  minimax.py  moonshot.py  moonshotai.py  openai.py  openai_chat.py  openai_responses.py
mycode/frontend/: biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
mycode/frontend/src/: App.jsx  index.css
mycode/frontend/src/components/: Layout.jsx  MobileHeader.jsx  Sidebar.jsx  ThemeProvider.jsx  WorkspacePicker.jsx
mycode/frontend/src/components/Chat/: CodeBlock.jsx  InputArea.jsx  MessageBubble.jsx  MessageList.jsx  ReasoningBlock.jsx  ToolCard.jsx
mycode/frontend/src/components/UI/: Button.jsx
mycode/frontend/src/hooks/: useChat.js
mycode/frontend/src/utils/: cn.js  messages.js  storage.js
mycode/server/: __init__.py  app.py  deps.py  run_manager.py  schemas.py
mycode/server/routers/: __init__.py  chat.py  sessions.py  workspaces.py
scripts/: build_frontend.py  build_web.py  release.sh  sync_web_dist.sh  update_models_catalog.py
tests/: conftest.py  test_agent_loop.py  test_agent_provider_request.py  test_bash.py  test_bash_and_agent.py  test_cli.py  test_cli_imports.py  test_compact.py  test_config.py  test_instructions.py  test_models.py  test_provider_adapters.py  test_rewind.py  test_run_manager.py  test_server_app.py  test_session.py  test_skills.py  test_tools.py
web/src/hooks/: useChat.test.tsx
