[project]
name = "mycode"
version = "0.1.0"
description = "Minimal coding agent with web UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "any-llm-sdk[anthropic]>=1.7.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [".venv", "venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "B008", "E501", "E731", "F401"
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
