[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycode"
version = "0.1.0"
description = "Minimal coding agent with web UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.74.0",
    "fastapi>=0.115.0",
    "openai>=2.11.0",
    "uvicorn[standard]>=0.32.0",
    "rich>=14.2.0",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
mycode = "mycode.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["mycode"]
artifacts = ["mycode/server/static/**"]

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.hatch.build.targets.sdist]
artifacts = ["mycode/server/static/**"]

[tool.hatch.build.targets.sdist.hooks.custom]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [".venv", "venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "B008", "E501", "E731", "F401"
]

[tool.ruff.lint.isort]
known-first-party = ["mycode"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
