[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycode-cli"
version = "0.2.0"
description = "Minimal coding agent with web UI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "LeGibet", email = "legibetpeng@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
keywords = ["agent", "cli", "llm", "coding-agent", "fastapi"]
dependencies = [
    "anthropic>=0.74.0",
    "fastapi>=0.115.0",
    "google-genai>=1.68.0",
    "openai>=2.11.0",
    "uvicorn[standard]>=0.32.0",
    "rich>=14.2.0",
    "prompt-toolkit>=3.0.52",
    "typer>=0.24.1",
]

[project.scripts]
mycode = "mycode.cli.main:main"

[project.urls]
Homepage = "https://github.com/legibet/mycode"
Repository = "https://github.com/legibet/mycode"
Issues = "https://github.com/legibet/mycode/issues"

[tool.hatch.build.targets.wheel]
packages = ["mycode"]
artifacts = ["mycode/server/static/**", "mycode/core/models_catalog.json"]

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.hatch.build.targets.sdist]
artifacts = ["mycode/server/static/**", "mycode/core/models_catalog.json"]

[tool.hatch.build.targets.sdist.hooks.custom]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "hatchling>=1.27.0",
    "ruff>=0.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.basedpyright]
include = ["mycode", "tests", "scripts", "hatch_build.py"]
exclude = [
    "**/__pycache__",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".uv-cache",
    "dist",
    "web",
]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "recommended"
reportMissingTypeStubs = false
reportAny = "none"
reportExplicitAny = "none"
reportImplicitOverride = "none"
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "hint"
# The internal message format uses dict[str, Any] by design.
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
# Prompt-toolkit key bindings register callbacks via decorators; the functions
# look unused to static analysis but are called at runtime.
reportUnusedFunction = "none"
reportUnreachable = "hint"
allowedUntypedLibraries = ["hatchling"]
executionEnvironments = [
    # Tests use pytest fixtures and autouse decorators that confuse static analysis.
    { root = "tests", reportMissingParameterType = "none", reportPrivateUsage = "none", reportUnknownArgumentType = "none", reportUnknownLambdaType = "none", reportUnknownMemberType = "none", reportUnknownParameterType = "none", reportUnknownVariableType = "none", reportUnusedParameter = "none", reportUnusedVariable = "none" },
]
baselineFile = ".basedpyright/baseline.json"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501", "E731"]

[tool.ruff.lint.isort]
known-first-party = ["mycode"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
